--- a/apps/front/public/locales/en/common.json
+++ b/apps/front/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "generate": "generate",
+  "regenerate": "Regenerate",
   "document_name": "Document name",
   "last_words": "Last words",
   "words": "Words",
@@ -9,7 +10,7 @@
   "content": "Content",
   "language": "Language",
   "tone": "Tone",
-  "output": "output",
+  "requests": "requests",
   "project": "Project",
   "new_project": "New project",
   "placeholder_subject": "Dreamtone",
@@ -20,6 +21,12 @@
   "modify": "Modify",
   "try": "Try",
   "quality": "Quality",
+  "you": "You",
+  "formality": "Formality",
+  "formal": "Formal",
+  "informal": "Informal",
+  "upgrade_plan": "Upgrade plan",
+  "confirm": "Confirm",
   "sidebar": {
     "library": "Library",
     "saved": "Saved",
@@ -38,11 +45,25 @@
     },
     "soon": "Soon"
   },
+  "saved": {
+    "title": "Saved",
+    "table": {
+      "title": "Title",
+      "creator":  "Creator",
+      "type": "Type",
+      "creation":  "Creation"
+    },
+    "remove": {
+      "title": "Clear history",
+      "confirmation": "Are you sure you want to delete?",
+      "remove": "Remove"
+    }
+  },
   "plans": {
     "trial": "Trial period",
     "premium": "Premium",
     "reactivate": "Reactivate",
-    "change_plan": "Change plan"
+    "change_plan": "Contact us"
   },
   "register" : {
     "alternative": "The cheaper alternative",
@@ -115,41 +136,57 @@
       "add_collaborator": "Add collaborator",
       "remaining_invite": "Remaining invite",
       "remaining_invites": "Remaining invites",
-      "confirm": "Confirm"
+      "confirm": "Confirm",
+      "team_not_available": "Your team is not available",
+      "please_upgrade": "Please upgrade your plan to be able to invite your teammates"
     }
   },
   "tools": {
     "added_value_extractor": {
       "title":"Adding value extractor",
-      "description":"Our cutting-edge software helps businesses uncover hidden value within their operations, enabling them to maximize their potential and achieve sustainable growth."
+      "description":"Our cutting-edge software helps businesses uncover hidden value within their operations, enabling them to maximize their potential and achieve sustainable growth.",
+      "content": "Product/Service Description"
     },
     "argument_generator": {
       "title": "Argument generator",
-      "description": "Our argument generation tool helps users construct compelling and persuasive arguments, making it easier to influence and persuade others"
+      "description": "Our argument generation tool helps users construct compelling and persuasive arguments, making it easier to influence and persuade others",
+      "linkedin_url": "Prospect’s Public LinkedIn URL",
+      "content": "Product/Service Description"
     },
     "cold_email_generator": {
       "title": "Cold Emails",
-      "description": "Our cold email generator creates professional and effective emails that increase the chances of generating interest and opportunities with potential clients"
+      "description": "Our cold email generator creates professional and effective emails that increase the chances of generating interest and opportunities with potential clients",
+      "linkedin_url": "Prospect’s Public LinkedIn URL",
+      "content": "Company/Product Information"
     },
     "company_bio": {
       "title": "Crafting a bio",
-      "description": "Our company bio crafting service helps businesses present themselves in a professional and engaging manner, telling their unique story and effectively communicating their brand"
+      "description": "Our company bio crafting service helps businesses present themselves in a professional and engaging manner, telling their unique story and effectively communicating their brand",
+      "subject": "Company Name",
+      "content": "Company Information"
     },
     "company_vision": {
       "title": "Crafting a Vision",
-      "description": "Our vision crafting service helps businesses define their future and create a clear, actionable roadmap for success"
+      "description": "Our vision crafting service helps businesses define their future and create a clear, actionable roadmap for success",
+      "subject": "Company Name",
+      "content": "Company Information"
     },
     "growth_ideas": {
       "title": "Fueling Growth",
-      "description": "Our growth idea generator helps businesses generate innovative ideas for expansion and growth, keeping them ahead of the curve"
+      "description": "Our growth idea generator helps businesses generate innovative ideas for expansion and growth, keeping them ahead of the curve",
+      "subject": "Product/Service Name",
+      "content": "Product/Service Description"
     },
     "ice_breaker_generator": {
       "title": "Breaking the Ice",
-      "description": "Our ice breaker generator creates engaging and attention-grabbing introductions, making it easier to build connections and start conversations"
+      "description": "Our ice breaker generator creates engaging and attention-grabbing introductions, making it easier to build connections and start conversations",
+      "linkedin_url": "Prospect’s Public LinkedIn URL",
+      "content": "Product/Service Description"
     },
     "linkedin_post_generator": {
       "title": "LinkedIn Posts",
-      "description": "Our LinkedIn post generator creates professional and engaging content that helps businesses increase their visibility and build their brand on the platform"
+      "description": "Our LinkedIn post generator creates professional and engaging content that helps businesses increase their visibility and build their brand on the platform",
+      "content": "Instructions"
     },
     "reformulation": {
       "title": "Reforming Your Approach",
@@ -157,20 +194,33 @@
     },
     "response_generator": {
       "title": "Responding Effectively",
-      "description": "Our response generation tool helps users communicate effectively and efficiently, enabling them to build and maintain positive relationships"
+      "description": "Our response generation tool helps users communicate effectively and efficiently, enabling them to build and maintain positive relationships",
+      "content": "Prospect Response"
     },
     "subsidiary_extractor": {
       "title": "Extracting Subsidiaries",
-      "description": "Unlock hidden potential within your subsidiary operations to drive growth and informed decisions"
+      "description": "Unlock hidden potential within your subsidiary operations to drive growth and informed decisions",
+      "subject": "Company Name"
     },
     "tonality_changer": {
       "title": "Changing Tonality",
-      "description": "Our tonality changing service helps businesses adapt their communication style to different audiences, ensuring that their message is received and understood"
+      "description": "Our tonality changing service helps businesses adapt their communication style to different audiences, ensuring that their message is received and understood",
+      "content": "Content"
     }
   },
   "languages": {
+    "spanish": "Spanish",
+    "german": "German",
     "english": "English",
-    "french": "French"
+    "italian": "Italian",
+    "portuguese": "Portuguese",
+    "brazilian": "Brazilian",
+    "russian": "Russian",
+    "chinese": "Chinese",
+    "czech": "Czech",
+    "french": "French",
+    "japanese": "Japanese",
+    "estonian": "Estonian"
   },
   "user_popover": {
     "profile": "My profile",
